fixed overflow issue when modals visible

--- a/src/styles.css
+++ b/src/styles.css
@@ -19,6 +19,7 @@
 body{
     font-family: "Poppins", sans-serif;
     background-color: var(--blue);
+    overflow-x: hidden;
 }
 
 button {
